# antigravity-runtime

./: .env.example  .gitignore  README.md  local_execution_runtime_saas_masterplan.md  package-lock.json  package.json  pyproject.toml  turbo.json
.agrt/environments/graph_1778668856/: pyvenv.cfg
.agrt/sessions/graph_1778668856/: checkpoint.json
agrt/: __init__.py  cli.py
agrt/api/: server.py
agrt/api/websocket/: handler.py
agrt/artifacts/execution_reports/: graph_1778668856.json
agrt/environment/collaboration/: git_provider.py
agrt/environment/failure_taxonomy/: definitions.py
agrt/environment/repair/: __init__.py  dependency_repair.py  ruff_repair.py
agrt/environment/sandbox/: __init__.py  attestation.py  base.py  venv_provider.py
agrt/environment/validation/: __init__.py  engine.py
agrt/generation/: __init__.py  merger.py  scaffolder.py
agrt/generation/patching/: ast_patcher.py
agrt/generation/planners/: base.py
agrt/generation/templates/: selector.py
agrt/intelligence/: schemas.py
agrt/kernel/cleanup/: manager.py
agrt/kernel/lifecycle/: evidence_manager.py  (+1 more)
agrt/replay/: engine.py
apps/desktop/: index.html  package.json  vite.config.ts
benchmarks/: run_benchmarks.py
docs/architecture/: antigravity_master_prompt.md  execution_flow.md  gemini_cli_master_prompt.md  generation_pipeline.md  phase_1_implementation.md  repair_strategies.md  runtime_architecture_spec.md
runtime/api/: server.py
runtime/generation/: __init__.py  merger.py  scaffolder.py
scripts/: golden_workflow.py  rename_runtime.py  verify_autonomous_loop.py
(+49 files in other folders)
