[tool.poetry]
name = "agrt"
version = "0.1.0"
description = "Antigravity Runtime: Autonomous Local Execution Infrastructure"
authors = ["Vedant Jadhav <vedant@example.com>"]
packages = [
    { include = "agrt" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"

[tool.poetry.scripts]
agrt = "agrt.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
